Styling changes Fix whitespace

--- a/client/static/global.css
+++ b/client/static/global.css
@@ -569,7 +569,7 @@ h4,
 h5,
 h6 {
   font-weight: 500;
-  margin-bottom: 1.5rem;
+  margin: 2rem 0 1.5rem;
   /* margin-top: 0; */
 }
 
@@ -601,6 +601,7 @@ h4 {
 h5,
 h6 {
   font-size: 1.6rem;
+  font-weight: 600;
 }
 
 img {
